--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                 </div>
                 <ul class="nav-menu">
                     <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#" class="">Our Mission</a></li>
-                    <li><a href="#" class="">Our Technology</a></li>
-                    <li><a href="#" class="">What We Offer</a></li>
-                    <li><a href="#" class="">What We Serve</a></li>
-                    <li><a href="#" class="">Why Telecareline</a></li>
+                    <li><a href="#">Our Mission</a></li>
+                    <li><a href="#">Our Technology</a></li>
+                    <li><a href="#">What We Offer</a></li>
+                    <li><a href="#">What We Serve</a></li>
+                    <li><a href="#">Why Telecareline</a></li>
                 </ul>
                 
                 <div class="nav-button">
@@ -102,7 +102,8 @@
                         </div>
                     </div>
                 </section>
-            </div><!-- Banner Area Ends -->
+            </div>
+            <!-- Banner Area Ends -->
             <!-- Plan Card Sections-->
             <section class="sect-cards-area">
                 <h1>Choose Your Plan</h1>
@@ -133,11 +134,11 @@
                                     <h4>This Plan includes:</h4> 
                                     <section >
                                         <p class="plan-card-caption-li">
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
                                         </p>
                                         <div class="nav-button">
                                             <button>Purchase</button>
@@ -172,11 +173,11 @@
                                     <h4>This Plan includes:</h4> 
                                     <section >
                                         <p class="plan-card-caption-li">
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
                                         </p>
                                         <div class="nav-button">
                                             <button>Purchase</button>
@@ -211,11 +212,11 @@
                                     <h4>This Plan includes:</h4> 
                                     <section >
                                         <p class="plan-card-caption-li">
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
-                                            <img src="images/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Plug & Play Lifeline Alarm<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Waterproof Alarm Pendant<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">100m Alert Range<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">Neck & Wrist Strap<br>
+                                            <img src="images/icons/checked.png" alt="Checked Icon" class="plan-icon">24/7 Monitoring<br>
                                         </p>
                                         <div class="nav-button">
                                             <button>Purchase</button>
@@ -251,7 +252,7 @@
                     </div>
                 </section>
             </div>
-            <!-- Plan Card Sections-->
+            <!-- Plan Card Sections Start-->
             <section class="sect-cards-area">
                 <h1>Choose Your Personal Alarm</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas pellentesque variu
@@ -270,7 +271,7 @@
                         <img src="images/products/alarms/gps-tracker.jpg" alt="GPS-MT018 Personal Alarm" class="card-image">
                         <h3>GPS Tracker MT018</h3>
                         <p>$99.99</p>
-                        <div class="nav-button">
+                        <div class="nav-button">    
                             <button>Get Started</button>
                         </div>
                     </div>
@@ -292,36 +293,124 @@
                     </div>
                 </div>
             </section>
+            <!-- Plan Card Sections End-->
+            <!-- Featured Area Starts -->
+            <div class="featured-area"> 
+                <section class="featured-area-section">
+                    <div class="featured-area-section-img">
+                        <img src="images/products/featured/gps-MT07B.jpg" alt="Featured Product Image">
+                    </div>
+                    <div class="featured-prod-desc">
+                        <h3>FEATURED PRODUCT</h3>
+                        <div class="featured-prod-title">
+                            <img src="images/icons/icon-featured.jpg" alt="Featured TeleCareline Icon" class="featured-icon">
+                            <h1>GPS Tracker MT07B</h1>
+                        </div>
+                        <p>Key Features:</p>
+                        <div>
+                            <ol>
+                                <li>Mini sized, Weather-proof IP66, Rubber handle paint, feels comfortable.</li>
+                                <li>Device can be charged by docking station (2g include) and micro USB.</li>
+                                <li>Real time tracking by GPS satellite.</li>
+                                <li>Real time tracking by CellLocate, location based on the cellular network,
+                                    users are able to track in shielded environments such as indoors and enclosed
+                                    park houses.</li>
+                                <li>AGPS, TTFF in 30 seconds (10 seconds for GPRS included).</li>
+                                <li>Fall detection for children and elderly, patient.</li>
+                            </ol>
+                        </div>
+                    </div>
+                </section>
+            </div>
+            <!-- Featured Area Ends -->
+             <!--Near Footer Banner Area Starts -->
+             <section>
+                <h1>What Telecareline Offers?</h1>
+                <section class="footer-banner"> 
+                    <div class="footer-banner-slogan">
+                        <div class="footer-card-section">
+                            <div class="footer-card-icon">
+                                <img src="images/icons/sos-icon.jpg" alt="SOS icon">
+                            </div>
+                            <div class="footer-card-desc">
+                                <h3>S.O.S Alert Pendants</h3>
+                                <p>
+                                    Our state-of-the-art SOS alert pendants are designed to be discreet, 
+                                    lightweight, and easy to use.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="footer-card-section">
+                            <div class="footer-card-icon">
+                                <img src="images/icons/customized-icon.jpg" alt="SOS icon">
+                            </div>
+                            <div class="footer-card-desc">
+                                <h3>Customized Response Plans</h3>
+                                <p>
+                                    We understand that every individual's needs are unique. That's why we work closely with 
+                                    you to create a customized response plan that fits your lifestyle and preferences.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="footer-card-section">
+                            <div class="footer-card-icon">
+                                <img src="images/icons/24-7-icon.jpg" alt="SOS icon">
+                            </div>
+                            <div class="footer-card-desc">
+                                <h3>24/7 Responder Call Centre</h3>
+                                <p>
+                                    Our highly trained and compassionate responders are available round-the-clock to 
+                                    assist you in any emergency situation.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer-banner-image">
+                        <img src="images/footer-banner.jpg" alt="Footer Banner Image">
+                    </div>
+                </section>
+             </section>
         <!-- Main Area End -->
         </main>    
         <!-- Footer Area Starts -->
          <footer>
-            <!-- Footer Banner Area Starts -->
-            <h1>What Telecareline Offers?</h1>
-            <div class="banner"> 
-                <div class="banner-slogan">
-                    <div>
-
-                    </div>
-                </div>
-                <div class="banner-image">
-                    <img src="images/footer-banner.jpg" alt="Footer Banner Image">
-                </div>
-                
-            </div>
             <!-- Footer Banner Area Ends -->
             <section class="footer-end-area">
-                <div class="container">
-                <p>
-                    &copy; <span></span> All Rights Reserved By
-                </p>
-                </div>
+                <section class="footer-end-section">
+                    <div class="footer-end-left">
+                        <h1>TeleCareline</h1>
+                        <p>Empowering Independence</p>
+                    </div>
+                    <div class="footer-end-mid">
+                        <h3>LONDON</h3>
+                        <ul>
+                            <li><a href="mailto:">newbusiness@telecareline.com</a></li>
+                            <li>+44 20 7998 12345</li>
+                            <li>Unit 306, Metropolitan Wharf</li>
+                            <li>70 Wapping WAll, London E1W 3SS</li>
+                        </ul>
+                    </div>
+                    <div class="footer-end-right">
+                        <h3>SAMPLE TEXT HERE</h3>
+                        <ul>
+                            <li><a href="mailto:">newbusiness@telecareline.com</a></li>
+                            <li>+44 20 7998 12345</li>
+                        </ul>
+                        <div>
+                            <h3>FOLLOW US</h3>
+                            <div class="footer-end-socials">
+                                <a href="http://"><img src="images/socials/fb.png" alt="Facebook logo"></a>
+                                <a href="http://"><img src="images/socials/linkedin.png" alt="Facebook logo"></a>
+                                <a href="http://"><img src="images/socials/twitter.png" alt="Facebook logo"></a>
+                                <a href="mailto:"><img src="images/socials/mail.png" alt="Facebook logo"></a>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+                <div class="container"> &copy; All Rights Reserved By <span>TeleCareline</span></div>
             </section>
-         </footer>
+        </footer>
         <!-- Footer Area End -->
-        <script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
-        <script type="text/javascript" src="js/bootstrap.js"></script>
-        <script type="text/javascript" src="js/custom.js"></script>
         <script type="text/javascript" src="style/nav-active.min.js"></script>
     </body>
 </html>
