Implemented the flex-flow styling

--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
         <!-- Custom styles for this template -->
         <link href="style/style.css" rel="stylesheet" />
-        <!-- responsive style -->
-        <link href="style/responsive.css" rel="stylesheet" />
     </head>
 
     <body>
@@ -34,15 +32,16 @@
                 <div class="logo">
                     <img src="images/logo.jpg" alt="Logo">
                 </div>
-                <ul class="nav-menu">
-                    <li><a href="#" class="active">Home</a></li>
-                    <li><a href="#">Our Mission</a></li>
-                    <li><a href="#">Our Technology</a></li>
-                    <li><a href="#">What We Offer</a></li>
-                    <li><a href="#">What We Serve</a></li>
-                    <li><a href="#">Why Telecareline</a></li>
-                </ul>
-                
+                <div class="nav-menu">
+                    <ul>
+                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="#">Our Mission</a></li>
+                        <li><a href="#">Our Technology</a></li>
+                        <li><a href="#">What We Offer</a></li>
+                        <li><a href="#">What We Serve</a></li>
+                        <li><a href="#">Why Telecareline</a></li>
+                    </ul>
+                </div>
                 <div class="nav-button">
                     <button>Our Plans</button>
                 </div>
@@ -85,9 +84,9 @@
             </div>
             <!-- Partners Area Ends -->
             <!-- Blog Area Starts -->
-            <div class="blog-area"> 
+            <section class="blog-area"> 
                 <section class="blog-area-section">
-                    <div>
+                    <div class="blog-area-img">
                         <img src="images/hero-bg.jpg" alt="Blog Area Image">
                     </div>
                     <div class="blog-area-text">
@@ -102,7 +101,7 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </section>
             <!-- Banner Area Ends -->
             <!-- Plan Card Sections-->
             <section class="sect-cards-area">
@@ -230,9 +229,9 @@
                     <!-- Plan Card Smart Personal Alarm END-->
                 </ul>
             </section>
-            <div class="blog-area">
+            <section class="blog-area">
                 <section class="blog-area-section">
-                    <div>
+                    <div class="blog-area-img">
                         <img src="images/blog.jpg" alt="Blog Area Image">
                     </div>
                     <div class="blog-area-text">
@@ -251,7 +250,7 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </section>
             <!-- Plan Card Sections Start-->
             <section class="sect-cards-area">
                 <h1>Choose Your Personal Alarm</h1>
@@ -295,7 +294,7 @@
             </section>
             <!-- Plan Card Sections End-->
             <!-- Featured Area Starts -->
-            <div class="featured-area"> 
+            <section class="featured-area"> 
                 <section class="featured-area-section">
                     <div class="featured-area-section-img">
                         <img src="images/products/featured/gps-MT07B.jpg" alt="Featured Product Image">
@@ -321,7 +320,7 @@
                         </div>
                     </div>
                 </section>
-            </div>
+            </section>
             <!-- Featured Area Ends -->
              <!--Near Footer Banner Area Starts -->
              <section>
@@ -407,10 +406,10 @@
                         </div>
                     </div>
                 </section>
-                <div class="container"> &copy; All Rights Reserved By <span>TeleCareline</span></div>
+                <!--<div class="container"> &copy; All Rights Reserved By <span>TeleCareline</span></div>-->
             </section>
         </footer>
         <!-- Footer Area End -->
-        <script type="text/javascript" src="style/nav-active.min.js"></script>
+        <script type="text/javascript" src="style/responsiveness.js"></script>
     </body>
 </html>
