Revised the Footer Icon section

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                         <div class="col-lg-6 col-md-12">
                             <h3>FEATURED PRODUCT</h3>
                             <div class="featured-prod-title d-flex align-items-center mb-3">
-                                <img src="images/icons/icon-featured.jpg" alt="Featured TeleCareline Icon" class="featured-icon me-3" style="width: 50px;">
+                                <img src="images/icons/icon-featured.jpg" alt="Featured TeleCareline Icon" class="featured-icon me-3">
                                 <h1 class="m-0">GPS Tracker MT07B</h1>
                             </div>
                             <p><strong>Key Features:</strong></p>
@@ -348,18 +348,17 @@
                     </div>
                 </div>
             </section>
-  <!-- Featured Area Ends -->
-  
             <!-- Featured Area Ends -->
+  
              <!--Near Footer Banner Area Starts -->
              <section>
                 <h1>What Telecareline Offers?</h1>
                 <section class="footer-banner"> 
                     <div class="footer-banner-slogan">
                         <div class="footer-card-section">
-                            <div class="footer-card-icon">
-                                <img src="images/icons/sos-icon.jpg" alt="SOS icon">
-                            </div>
+                            <div class="footer-card-icon mb-3">
+                                <img src="images/icons/sos-icon.jpg" alt="SOS icon" class="img-fluid">
+                              </div>
                             <div class="footer-card-desc">
                                 <h3>S.O.S Alert Pendants</h3>
                                 <p>
@@ -369,8 +368,8 @@
                             </div>
                         </div>
                         <div class="footer-card-section">
-                            <div class="footer-card-icon">
-                                <img src="images/icons/customized-icon.jpg" alt="SOS icon">
+                            <div class="footer-card-icon mb-3">
+                                <img src="images/icons/customized-icon.jpg" alt="Customized icon" class="img-fluid">
                             </div>
                             <div class="footer-card-desc">
                                 <h3>Customized Response Plans</h3>
@@ -381,8 +380,8 @@
                             </div>
                         </div>
                         <div class="footer-card-section">
-                            <div class="footer-card-icon">
-                                <img src="images/icons/24-7-icon.jpg" alt="SOS icon">
+                            <div class="footer-card-icon mb-3">
+                                <img src="images/icons/24-7-icon.jpg" alt="SOS icon" class="img-fluid">
                             </div>
                             <div class="footer-card-desc">
                                 <h3>24/7 Responder Call Centre</h3>
