Added the other pages

--- a/our-mission.html
+++ b/our-mission.html
@@ -38,10 +38,10 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto" id="nav-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="our-mission.html">Our Mission</a>
+                                    <a class="nav-link active" href="our-mission.html">Our Mission</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="our-tech.html">Our Technology</a>
