--- a/our-tech.html
+++ b/our-tech.html
@@ -38,13 +38,13 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto" id="nav-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="our-mission.html">Our Mission</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="our-tech.html">Our Technology</a>
+                                    <a class="nav-link active" href="our-tech.html">Our Technology</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="we-offer.html">What We Offer</a>
