--- a/why-telecareline.html
+++ b/why-telecareline.html
@@ -38,7 +38,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto" id="nav-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="our-mission.html">Our Mission</a>
@@ -53,7 +53,7 @@
                                     <a class="nav-link" href="we-serve.html">What We Serve</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="why-telecareline.html">Why Telecareline</a>
+                                    <a class="nav-link active" href="why-telecareline.html">Why Telecareline</a>
                                 </li>
                             </ul>
                             <div class="nav-button">
