--- a/we-offer.html
+++ b/we-offer.html
@@ -38,7 +38,7 @@
                         <div class="collapse navbar-collapse" id="navbarNav">
                             <ul class="navbar-nav ms-auto" id="nav-menu">
                                 <li class="nav-item">
-                                    <a class="nav-link active" href="index.html">Home</a>
+                                    <a class="nav-link" href="index.html">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="our-mission.html">Our Mission</a>
@@ -47,7 +47,7 @@
                                     <a class="nav-link" href="our-tech.html">Our Technology</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="we-offer.html">What We Offer</a>
+                                    <a class="nav-link active" href="we-offer.html">What We Offer</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="we-serve.html">What We Serve</a>
